Fix tuto for E2E

--- a/src/app/pages/tuto/tuto.scss
+++ b/src/app/pages/tuto/tuto.scss
@@ -20,11 +20,8 @@
 */
 
 #slides {
-
-    background: map-get($colors, uclouvain) !important;
+    background: var(--ion-color-uclouvain) !important;
 }
-
-
 
 ion-slide p {
     color: white;
