--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -38,12 +38,10 @@ b {
 button[ion-fab] {
     overflow: visible;
     position: relative;
-
     ion-label {
         position: absolute;
         top: -37px;
         right: -24px;
-
         color: black;
         //background-color: rgba(0,0,0,0.7);
         line-height: 24px;
@@ -54,28 +52,31 @@ button[ion-fab] {
 
 ion-content.hM {
     height: 100% !important;
-
-    ion-row.homeM {
-        height: 20vh;
-
-        img {
-            height: 16vh;
-        }
-
-        p {
-            margin-top: 0px;
+    ion-grid.portrait {
+        height: 100% !important;
+        ion-row {
+            height: calc(20vh - 11.2px);
+            img:not(.uclouvain) {
+                height: calc(16vh - 8.96px);
+            }
+            p {
+                margin-top: 0px;
+            }
         }
     }
-
-    ion-row.homeML {
-        height: 25vh;
-
-        img {
-            height: 18.75vh;
+    ion-grid.landscape {
+        height: 100% !important;
+        ion-row {
+            height: calc(25vh - 14px);
+            img:not(.uclouvain) {
+                height: calc(18.75vh - 10.5px);
+            }
+            p {
+                margin-top: 0px;
+            }
         }
-
-        p {
-            margin-top: 0px;
-        }
+    }
+    ion-text {
+        color: var(--ion-color-home) !important;
     }
 }
