--- a/src/app/pages/sports/sports.scss
+++ b/src/app/pages/sports/sports.scss
@@ -19,31 +19,37 @@
     along with Stud.UCLouvain.  If not, see <http://www.gnu.org/licenses/>.
 */
 
-page-sports {
-  .spinner-container {
-    width: 100%;
-    text-align: center;
-    padding: 10px;
-  }
+.spinner-container {
+  width: 100%;
+  text-align: center;
+  padding: 10px;
+}
 
-  .large-icon {
-    font-size: 40px;
-  }
+.large-icon {
+  font-size: 40px;
+}
 
-  .team {
-    //#90c53e
+.team {
+  background-color: #90c53e;
+
+  ion-label {
     background-color: #90c53e;
     color: white;
   }
+}
 
-  .all {
-    background-color: #0f1d41;
-    color: white;
-    //#0f1d41
+ion-content.all {
+  --ion-background-color: #0f1d41 !important;
+
+  ion-searchbar {
+    --ion-background-color: white;
   }
+}
 
-  .text {
+ion-label * {
+  color: var(--ion-color-sport);
+}
 
-    color: white;
-  }
+ion-label {
+  color: var(--ion-color-sport) !important;
 }
