--- a/src/app/pages/tuto/tuto.html
+++ b/src/app/pages/tuto/tuto.html
@@ -19,107 +19,99 @@
     along with Stud.UCLouvain.  If not, see <http://www.gnu.org/licenses/>.
 *-->
 <ion-content>
-  <ion-slides id="slides" pager="true" class="tutoSlides">
+    <ion-slides id="slides" pager="true" class="tutoSlides">
+        <ion-slide id="tutoSlide" class="tutoSlide">
+            <ion-grid>
+                <ion-row class="descr">
+                    <p>{{'TUTO.SIDE1' | translate}}</p>
+                </ion-row>
+                <ion-row class="img">
+                    <img id="menu" src="./assets/img/tuto/menu.png" />
+                </ion-row>
+            </ion-grid>
+        </ion-slide>
 
-    <ion-slide id="tutoSlide" class="tutoSlide">
-      <ion-row justify-content-center align-items-center class="title">
-        <p>{{'TUTO.SIDE' | translate}}</p>
-      </ion-row>
-      <ion-row justify-content-center align-items-center class="img">
-        <img id="menu" src="./assets/img/tuto/menu.png" />
-      </ion-row>
-      <ion-row justify-content-center align-items-center class="descr">
-        <p>{{'TUTO.SIDE1' | translate}}</p>
-      </ion-row>
-    </ion-slide>
+        <ion-slide id="tutoSlide" class="tutoSlide">
+            <ion-grid>
+                <ion-row class="descr">
+                    <p>{{'TUTO.SIDE2' | translate}}</p>
+                </ion-row>
+                <ion-row class="img">
+                    <img id="menu" src="./assets/img/tuto/menu_right.png" />
+                </ion-row>
+            </ion-grid>
+        </ion-slide>
 
-    <ion-slide id="tutoSlide" class="tutoSlide">
-      <ion-row justify-content-center align-items-center class="title">
-        <p>{{'TUTO.SIDEB' | translate}}</p>
-      </ion-row>
-      <ion-row justify-content-center align-items-center class="img">
-        <img id="menu" src="./assets/img/tuto/menu_right.png" />
-      </ion-row>
-      <ion-row justify-content-center align-items-center class="descr">
-        <p>{{'TUTO.SIDE2' | translate}}</p>
-      </ion-row>
-    </ion-slide>
+        <ion-slide id="tutoSlide" class="tutoSlide">
+            <ion-grid>
+                <ion-row class="descr">
+                    <p>{{'TUTO.SIDE3' | translate}}</p>
+                </ion-row>
+                <ion-row class="img">
+                    <img id="menu" src="./assets/img/tuto/add.jpg" />
+                </ion-row>
+            </ion-grid>
+        </ion-slide>
 
-    <ion-slide id="tutoSlide" class="tutoSlide">
-      <ion-row justify-content-center align-items-center class="title">
-        <p>{{'TUTO.SIDEC' | translate}}</p>
-      </ion-row>
-      <ion-row justify-content-center align-items-center class="img">
-        <img id="menu" src="./assets/img/tuto/add.jpg" />
-      </ion-row>
-      <ion-row justify-content-center align-items-center class="descr">
-        <p>{{'TUTO.SIDE3' | translate}}</p>
-      </ion-row>
-    </ion-slide>
+        <ion-slide id="tutoSlide" class="tutoSlide">
+            <ion-grid>
+                <ion-row class="descr">
+                    <p>{{'TUTO.SIDE4' | translate}}</p>
+                </ion-row>
+                <ion-row class="img">
+                    <img id="menu" src="./assets/img/tuto/course.jpg" />
+                </ion-row>
+            </ion-grid>
+        </ion-slide>
 
-    <ion-slide id="tutoSlide" class="tutoSlide">
-      <ion-row justify-content-center align-items-center class="title">
-        <p>{{'TUTO.SIDED' | translate}}</p>
-      </ion-row>
-      <ion-row justify-content-center align-items-center class="img">
-        <img id="menu" src="./assets/img/tuto/course.jpg" />
-      </ion-row>
-      <ion-row justify-content-center align-items-center class="descr">
-        <p>{{'TUTO.SIDE4' | translate}}</p>
-      </ion-row>
-    </ion-slide>
+        <ion-slide id="tutoSlide" class="tutoSlide">
+            <ion-grid>
+                <ion-row class="descr">
+                    <p>{{'TUTO.SIDE5' | translate}}</p>
+                </ion-row>
+                <ion-row class="img">
+                    <img id="menu" src="./assets/img/tuto/cut.jpg" />
+                </ion-row>
+            </ion-grid>
+        </ion-slide>
 
-    <ion-slide id="tutoSlide" class="tutoSlide">
-      <ion-row justify-content-center align-items-center class="title">
-        <p>{{'TUTO.SIDED' | translate}}</p>
-      </ion-row>
-      <ion-row justify-content-center align-items-center class="img">
-        <img id="menu" src="./assets/img/tuto/cut.jpg" />
-      </ion-row>
-      <ion-row justify-content-center align-items-center class="descr">
-        <p>{{'TUTO.SIDE5' | translate}}</p>
-      </ion-row>
-    </ion-slide>
+        <ion-slide id="tutoSlide" class="tutoSlide">
+            <ion-grid>
+                <ion-row class="descr">
+                    <p>{{'TUTO.SIDE6' | translate}}</p>
+                </ion-row>
+                <ion-row class="img">
+                    <img id="menu" src="./assets/img/tuto/rep.png" />
+                </ion-row>
+            </ion-grid>
+        </ion-slide>
 
-    <ion-slide id="tutoSlide" class="tutoSlide">
-      <ion-row justify-content-center align-items-center class="title">
-        <p>{{'TUTO.SIDEE' | translate}}</p>
-      </ion-row>
-      <ion-row justify-content-center align-items-center class="img">
-        <img id="menu" src="./assets/img/tuto/rep.png" />
-      </ion-row>
-      <ion-row justify-content-center align-items-center class="descr">
-        <p>{{'TUTO.SIDE6' | translate}}</p>
-      </ion-row>
-    </ion-slide>
+        <ion-slide id="tutoSlide" class="tutoSlide">
+            <ion-grid>
+                <ion-row class="descr">
+                    <p>{{'TUTO.SIDE7' | translate}}</p>
+                </ion-row>
+                <ion-row class="img">
+                    <img id="menu" src="./assets/img/tuto/news.jpg" />
+                </ion-row>
+            </ion-grid>
+        </ion-slide>
 
-    <ion-slide id="tutoSlide" class="tutoSlide">
-      <ion-row justify-content-center align-items-center class="title">
-        <p>{{'TUTO.SIDEF' | translate}}</p>
-      </ion-row>
-      <ion-row justify-content-center align-items-center class="img">
-        <img id="menu" src="./assets/img/tuto/news.jpg" />
-      </ion-row>
-      <ion-row justify-content-center align-items-center class="descr">
-        <p>{{'TUTO.SIDE7' | translate}}</p>
-      </ion-row>
-    </ion-slide>
-
-    <ion-slide id="tutoSlide" class="tutoSlide">
-      <ion-row>
-        <ion-col>
-
-        </ion-col>
-      </ion-row>
-      <ion-row>
-        <ion-col>
-          <ion-row justify-content-center align-items-center>
-            <p>{{'TUTO.SIDE8' | translate}}</p>
-          </ion-row>
-          <ion-button id="goHome" color="light" (click)="goToHome()">Go to HomeScreen</ion-button>
-        </ion-col>
-      </ion-row>
-    </ion-slide>
-
-  </ion-slides>
+        <ion-slide id="tutoSlide" class="tutoSlide">
+            <ion-grid>
+                <ion-row>
+                    <ion-col>
+                    </ion-col>
+                </ion-row>
+                <ion-row>
+                    <ion-col>
+                        <ion-row>
+                            <p>{{'TUTO.SIDE8' | translate}}</p>
+                        </ion-row>
+                        <ion-button id="goHome" color="light" (click)="goToHome()">Go to HomeScreen</ion-button>
+                    </ion-col>
+                </ion-row>
+            </ion-grid>
+        </ion-slide>
+    </ion-slides>
 </ion-content>
