--- a/src/app/pages/map/search/search.html
+++ b/src/app/pages/map/search/search.html
@@ -41,13 +41,13 @@
 <ion-content>
   <ion-list>
     <ion-item *ngFor="let item of displayItems" (click)="select(item)">
-      <span padding *ngIf="item.id">
+      <span padding *ngIf="item.code">
         <div class="info">
-          <ion-label class="id">{{item.id}}</ion-label>
-          <ion-label class="name">{{item.name}}</ion-label>
+          <ion-label class="id">{{item.code}}</ion-label>
+          <ion-label class="name">{{item.title}}</ion-label>
           <ion-note class="address">{{item.address}}</ion-note>
         </div>
-        <ion-img class="miniature" [src]="getImgSource(item.id)"></ion-img>
+        <ion-img class="miniature" [src]="item.vignette"></ion-img>
       </span>
     </ion-item>
   </ion-list>
