--- a/src/app/pages/guindaille2-0/guindaille2-0.html
+++ b/src/app/pages/guindaille2-0/guindaille2-0.html
@@ -44,88 +44,85 @@
 </ion-header>
 
 <!--BODY-->
-<ion-content [ngClass]="{'guindailleHelp' : segment === 'help', 'guindaille' : segment !== 'help'}">
-  <ng-container *ngIf="segment==='pict'" class="gelem">
+<ion-content>
+  <ion-grid class="gelem" no-lines *ngIf="segment==='pict'">
+    <ion-row>
+      <ion-col size="4" *ngFor="let pict of pictos; let l = last" [offset]="l ? 4 : 0">
+        <img [src]="pict.image" vertical="center" height="auto" (click)="showAlert(pict)" />
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
-    <ion-grid class="gelem" no-lines>
-      <ion-row>
-        <ion-col size="4" *ngFor="let pict of pictos; let l = last" [offset]="l ? 4 : 0">
-          <img [src]="pict.image" vertical="center" height="auto" (click)="showAlert(pict)" />
-        </ion-col>
-      </ion-row>
-    </ion-grid>
-  </ng-container>
+  <div *ngIf="segment==='effect'" class="gelem">
+    <ion-slides pager align-items-center>
+      <ion-slide *ngFor="let slide of slides">
+        <img [src]="slide.image" class="slide-image" (click)="showAlert(slide)" />
+      </ion-slide>
+    </ion-slides>
+    <p style="color:white">{{'GUINDAILLE.SLIDE' | translate}}</p>
+  </div>
 
-  <ng-container *ngIf="segment==='effect'" class="gelem">
-
-    <ion-item class="gelem" no-lines>
-      <ion-slides pager>
-        <ion-slide *ngFor="let slide of slides">
-          <img [src]="slide.image" class="slide-image" (click)="showAlert(slide)" />
-        </ion-slide>
-      </ion-slides>
-      <p style="color:white">{{'GUINDAILLE.SLIDE' | translate}}</p>
-    </ion-item>
-  </ng-container>
-
-  <ng-container *ngIf="segment==='help'" class="gelem">
-
-    <ion-item class="gelem">
-      <ion-label>
-        <div
-          style="border: 2px solid #1c75c8; padding: 3px; background-color: #c5ddf6; -moz-border-radius-topleft: 5px; -moz-border-radius-topright: 5px; -moz-border-radius-bottomright: 5px; -moz-border-radius-bottomleft: 5px;"
-          text-wrap>
-          <p>
-            <strong>{{'GUINDAILLE.HELP1' | translate}}</strong>: <a href="tel:010 47 22 22">010 47 22 22</a>
-          </p>
-          <p>
-            <strong>{{'GUINDAILLE.HELP2' | translate}}</strong>:
+  <ion-card class="gelem" *ngIf="segment==='help'">
+    <ion-item text-center>
+      <ion-label text-wrap>
+        <h2> <strong>{{'GUINDAILLE.HELP11' | translate}} </strong></h2>
+        <p [innerHTML]="'GUINDAILLE.HELP12' | translate"></p><br>
+        <p [innerHTML]="'GUINDAILLE.HELP13' | translate"></p>
+        <p style="text-align: left">
+          <li>{{'GUINDAILLE.HELP14' | translate}}</li>
+          <li>{{'GUINDAILLE.HELP15' | translate}}</li>
+          <li>{{'GUINDAILLE.HELP16' | translate}}</li>
+          <li>{{'GUINDAILLE.HELP17' | translate}}</li>
+        </p>
+        <ion-card>
+          <ion-card-content>
+            <strong style='color: red;'>{{'GUINDAILLE.HELP1' | translate}}</strong>:
+            <br>
+            <a href="tel:010 47 22 22">010 47 22 22</a>
+            <br>
+            <strong style='color: red;'>{{'GUINDAILLE.HELP2' | translate}}</strong>:
             <br>
             <a href="tel:010 47 24 24">010 47 24 24</a>
             <br>
-            ou
+            <strong style='color: red;'>Woluwe - St Gilles - Tournai</strong>:
             <br>
             <a href="tel:02 764 93 93">02 764 93 93</a>
             <br>
-            (Woluwe - St Gilles - Tournai)
+            <strong style='color: red;'>Mons</strong>:
             <br>
-            ou
+            <a href="tel:065 32 35 55">065 32 35 55</a>
             <br>
-            <a href="tel:065 32 35 55">065 32 35 55</a> (Mons)
-          </p>
-          <p>
-            <strong>Contact: </strong> <a href="mailto:security@uclouvain.be">security@uclouvain.be</a>
-          </p>
-          <p>
-            <strong>{{'GUINDAILLE.HELP18' | translate}} : </strong>
+            <strong style='color: red;'>Mail: </strong>
+            <br>
+            <a href="mailto:security@uclouvain.be">security@uclouvain.be</a>
+            <br>
+            <strong style='color: red;'>{{'GUINDAILLE.HELP18' | translate}} : </strong>
+            <br>
             <a href="tel:112">112</a>
-          </p>
-          <p>
-            <br>{{'GUINDAILLE.HELP3' | translate}} <br><br>
-            <strong>{{'GUINDAILLE.HELP4' | translate}}</strong> {{'GUINDAILLE.HELP5' | translate}}<br>
-            <strong>{{'GUINDAILLE.HELP6' | translate}}</strong> {{'GUINDAILLE.HELP7' | translate}}<br>
-            <strong>{{'GUINDAILLE.HELP8' | translate}}</strong> {{'GUINDAILLE.HELP9' | translate}}<br>
-            <br> {{'GUINDAILLE.HELP10' | translate}} <br>
-          </p> <br>
-          <h2> <strong>{{'GUINDAILLE.HELP11' | translate}} </strong></h2>
-          <p [innerHTML]="'GUINDAILLE.HELP12' | translate"></p><br>
-          <p [innerHTML]="'GUINDAILLE.HELP13' | translate"></p>
-          <p style="text-align: left">
-            <li>{{'GUINDAILLE.HELP14' | translate}}</li>
-            <li>{{'GUINDAILLE.HELP15' | translate}}</li>
-            <li>{{'GUINDAILLE.HELP16' | translate}}</li>
-            <li>{{'GUINDAILLE.HELP17' | translate}}</li>
-          </p>
-        </div>
+          </ion-card-content>
+        </ion-card>
+        <p>
+          <br>{{'GUINDAILLE.HELP3' | translate}} <br><br>
+          <strong>{{'GUINDAILLE.HELP4' | translate}}</strong>
+          <br>
+          {{'GUINDAILLE.HELP5' | translate}}
+          <br>
+          <strong>{{'GUINDAILLE.HELP6' | translate}}</strong>
+          <br>
+          {{'GUINDAILLE.HELP7' | translate}}
+          <br>
+          <strong>{{'GUINDAILLE.HELP8' | translate}}</strong>
+          <br>
+          {{'GUINDAILLE.HELP9' | translate}}
+          <br>
+          {{'GUINDAILLE.HELP10' | translate}}
+        </p>
       </ion-label>
     </ion-item>
-  </ng-container>
-
-
-
+  </ion-card>
 </ion-content>
 
 <ion-footer class="gfoot" text-center *ngIf="segment === 'effect' || segment === 'pict'" [hidden]="segment === 'help'">
   <ion-icon name='help-circle'></ion-icon>
-  <p class="gtextf">{{'GUINDAILLE.CLICK' | translate}}</p>
+  <p class="gtext">{{'GUINDAILLE.CLICK' | translate}}</p>
 </ion-footer>
