--- a/src/app/pages/mobility/mobility.scss
+++ b/src/app/pages/mobility/mobility.scss
@@ -23,21 +23,25 @@
     margin-top: 56px;
 }
 
-ion-grid {
-    height: 100%;
+ion-content {
+    height: 100% !important;
 
-    ion-row {
-        height: 33%;
+    ion-grid {
+        height: 100% !important;
 
-        ion-col {
-            height: 100%;
+        ion-row {
+            height: 33% !important;
 
-            img {
-                max-height: 100%;
-            }
+            ion-col {
+                height: 100% !important;
 
-            p {
-                margin-top: 0px;
+                img {
+                    max-height: 100%;
+                }
+
+                p {
+                    margin-top: 0px;
+                }
             }
         }
     }
