Review by DesignMaster

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -58,10 +58,10 @@ ion-content.hM {
         height: 100% !important;
 
         ion-row {
-            height: calc(20vh - 11.2px);
+            height: calc(20vh - 22.4px);
 
             img:not(.uclouvain) {
-                height: calc(16vh - 8.96px);
+                height: calc(15vh - 17.92px);
             }
 
             p {
@@ -74,10 +74,10 @@ ion-content.hM {
         height: 100% !important;
 
         ion-row {
-            height: calc(25vh - 14px);
+            height: calc(25vh - 28px);
 
             img:not(.uclouvain) {
-                height: calc(18.75vh - 10.5px);
+                height: calc(18.75vh - 21px);
             }
 
             p {
@@ -89,4 +89,8 @@ ion-content.hM {
     ion-text {
         color: var(--ion-color-home) !important;
     }
+}
+
+ion-footer ion-toolbar ion-row ion-col {
+    width: 20vw !important;
 }
