--- a/src/app/pages/mobility/mobility.html
+++ b/src/app/pages/mobility/mobility.html
@@ -31,7 +31,7 @@
 
 <!--BODY-->
 <ion-content>
-  <ion-grid padding>
+  <ion-grid padding *ngIf="platform.isPortrait()" class="portrait">
     <ion-row>
       <ion-col align-self-end text-center><img (click)="utilsServices.launchExternalApp(carpoolingPage)" alt="voiture"
           src="./assets/img/commuty.png" vertical="center" />
@@ -48,6 +48,32 @@
       <ion-col align-self-end text-center><img (click)="utilsServices.launchExternalApp(trainPage)" alt="train"
           src="./assets/img/sncb.png" vertical="center" />
         <p horizontal="center"><b>{{'MOBI.SNCB' | translate}}</b></p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+  <ion-grid *ngIf="platform.isLandscape()" class="landscape">
+    <ion-row text-center align-items-center>
+      <ion-col size="4">
+        <ion-label>
+          <img (click)="utilsServices.launchExternalApp(carpoolingPage)" alt="voiture" src="./assets/img/commuty.png" />
+          <p><b>{{'MOBI.COVOIT' | translate}}</b></p>
+        </ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row text-center align-items-center>
+      <ion-col align-content-center size="4" offset="4">
+        <ion-label>
+          <img (click)="utilsServices.launchExternalApp(busPage)" alt="bus" src="./assets/img/nextride.png" />
+          <p><b>{{'MOBI.BUS' | translate}}</b></p>
+        </ion-label>
+      </ion-col>
+    </ion-row>
+    <ion-row text-center align-items-center>
+      <ion-col size="4" offset='8'>
+        <ion-label>
+          <img (click)="utilsServices.launchExternalApp(trainPage)" alt="train" src="./assets/img/sncb.png" />
+          <p><b>{{'MOBI.SNCB' | translate}}</b></p>
+        </ion-label>
       </ion-col>
     </ion-row>
   </ion-grid>
