--- a/src/app/pages/news/news.scss
+++ b/src/app/pages/news/news.scss
@@ -24,3 +24,11 @@
   text-align: center;
   padding: 10px;
 }
+
+#valve {
+  height: 100% !important;
+
+  ion-row {
+    height: 100% !important;
+  }
+}
