--- a/src/app/pages/news/news.html
+++ b/src/app/pages/news/news.html
@@ -29,7 +29,7 @@
     </ion-buttons>
     <ion-title horizontal="center">{{title | translate}}</ion-title>
   </ion-toolbar>
-  <ion-segment [(ngModel)]="segment" name="segment" (ionChange)="tabChanged()">
+  <ion-segment [(ngModel)]="segment" name="segment" (ionChange)="tabChanged($newTab)">
     <ion-segment-button value="univ">
       <ion-label>{{'NEWS.UNIF' | translate}}</ion-label>
     </ion-segment-button>
@@ -48,7 +48,7 @@
       <ion-label>{{'NEWS.SERVICE' | translate}}</ion-label>
     </ion-segment-button>
   </ion-segment>
-  <ion-segment [(ngModel)]="facsegment" *ngIf="segment==='fac'">
+  <ion-segment [(ngModel)]="facsegment" *ngIf="segment==='fac'" name="facsegment">
     <ion-segment-button value="news">
       <ion-label>{{'HOME.NEWS' |translate}} <strong *ngIf="userS.hasFac()">({{userS.fac}})</strong></ion-label>
     </ion-segment-button>
@@ -56,11 +56,13 @@
       <ion-label>{{'NEWS.VALVE' | translate}}</ion-label>
     </ion-segment-button>
   </ion-segment>
+  <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl" *ngIf="segment === 'univ'"
+    (ionChange)="filterUpdatedNews()"></ion-searchbar>
+
 </ion-header>
 
 <!--BODY-->
 <ion-content class="feed-list" #news>
-  <ion-searchbar [(ngModel)]="searchTerm" [formControl]="searchControl" *ngIf="segment === 'univ'"></ion-searchbar>
   <ion-refresher (ionRefresh)="doRefresh($event)">
     <ion-refresher-content pullingIcon="arrow-dropdown" pullingText="Pull to refresh" refreshingSpinner="circles">
     </ion-refresher-content>
@@ -69,48 +71,47 @@
 
   <!------------------------------NEWS FACULTAIRES -------------------------------->
   <!------------------------------CHOIX FAC -------------------------------->
-  <ng-container *ngIf="segment === 'fac'">
-    <ion-list *ngIf="!userS.hasFac() && facsegment === 'news'">
-      <ion-item-group *ngFor="let sector of listFac">
-        <ion-item-divider><strong>
-            <ion-label>{{sector.name}}</ion-label>
-          </strong></ion-item-divider>
-        <ion-item *ngFor="let facs of sector.facs">
-          <ion-label>{{facs.acro}} : {{facs.name}}</ion-label>
-          <ion-radio slot="start" (click)="updateFac(facs.acro)"></ion-radio>
-        </ion-item>
-      </ion-item-group>
-    </ion-list>
+  <ion-list *ngIf="segment === 'fac' && !userS.hasFac() && facsegment === 'news'">
+    <ion-item-group *ngFor="let sector of listFac">
+      <ion-item-divider>
+        <ion-label><strong>{{sector.name}}</strong></ion-label>
+      </ion-item-divider>
+      <ion-item *ngFor="let facs of sector.facs">
+        <ion-label>{{facs.acro}} : {{facs.name}}</ion-label>
+        <ion-radio slot="start" (click)="updateFac(facs.acro)"></ion-radio>
+      </ion-item>
+    </ion-item-group>
+  </ion-list>
 
-    <!--------------------------------------- ACTUALITES VALVES ? ---------------------------------->
-    <ion-item *ngIf="facsegment==='valve'" no-lines>
-      <ion-button center fill="clear" size="small" slot="start" text-center
+  <!--------------------------------------- ACTUALITES VALVES ? ---------------------------------->
+  <ion-grid *ngIf="segment === 'fac' && facsegment==='valve'" id="valve">
+    <ion-row align-items-center justify-content-center>
+      <ion-button fill="solid" size="large" color="news"
         (click)="openURL('https://sites.uclouvain.be/sgsi-apps/shib-mesvalves/prod/')">
         <ion-icon name='share-alt'></ion-icon>
-        <ion-label>{{'NEWS.MESVALVES' | translate}}</ion-label>
+        <ion-label text-center>{{'NEWS.MESVALVES' | translate}}</ion-label>
       </ion-button>
+    </ion-row>
+  </ion-grid>
+  <!--------------------------- ACTUALITES FAC ----------------------------------------->
+
+  <ion-row justify-content-center *ngIf="segment === 'fac' && userS.hasFac() && facsegment==='news'">
+    <!---------------------------------------------------------------------->
+    <ion-item>
+      <ion-label>
+        <h2><strong>Faculté : {{userS.fac}}</strong></h2>
+      </ion-label>
     </ion-item>
-    <!--------------------------- ACTUALITES FAC ----------------------------------------->
-
-    <ion-item *ngIf="userS.hasFac()">
-
-      <!---------------------------------------------------------------------->
-      <ion-row center>
-        <ion-col text-center>
-          <h2 *ngIf="facsegment === 'news'"><strong>Faculté : {{userS.fac}}</strong></h2>
-        </ion-col>
-      </ion-row>
-      <ion-button center fill="clear" size="small" slot="start" (click)="openURL(site)"
-        *ngIf="site.length > 0 && facsegment ==='news'">
-        <ion-icon name='share-alt'></ion-icon>
-        {{'NEWS.WEB' | translate}}
-      </ion-button>
-      <p text-center *ngIf="site.length == 0 && rss.length == 0 && facsegment ==='news'"><strong>Indisponible pour le
-          moment</strong></p>
-
-
-    </ion-item>
-  </ng-container>
+  </ion-row>
+  <ion-button center fill="clear" size="small" slot="start" (click)="openURL(site)"
+    *ngIf="segment === 'fac' && site.length > 0 && facsegment ==='news'">
+    <ion-icon name='share-alt'></ion-icon>
+    {{'NEWS.WEB' | translate}}
+  </ion-button>
+  <p text-center
+    *ngIf="segment === 'fac' && site.length == 0 && rss.length == 0 && shownNews == 0 && facsegment ==='news'">
+    <strong>Indisponible pour le moment</strong>
+  </p>
 
   <!------------------------------NEWS UNIVERSITAIRES & FACULTAIRES-------------------------------->
   <ng-container *ngIf="segment==='univ' || (segment === 'fac' && facsegment === 'news' && userS.hasFac())">
@@ -136,7 +137,7 @@
 <!----------------- BUTTON TO CHANGE FAC ------------------------->
 <ion-fab slot="fixed" vertical="bottom" horizontal="end"
   *ngIf="segment==='fac' && facsegment === 'news' && userS.hasFac()">
-  <ion-fab-button (click)="removeFac(fac)">
+  <ion-fab-button (click)="removeFac()">
     <ion-icon name="swap"></ion-icon>
   </ion-fab-button>
 </ion-fab>
