--- a/src/app/pages/support/support.html
+++ b/src/app/pages/support/support.html
@@ -203,7 +203,7 @@
 
   <!----------------SERVICES D AIDES ---------------------->
   <ng-container *ngIf="segment==='aide'">
-    <h1><strong> {{'HELP.AIDE1' | translate}} </strong></h1>
+    <h1 style="text-align:center"><strong> {{'HELP.AIDE1' | translate}} </strong></h1>
     <ion-button fill="clear" size="small" (click)="openURL('https://uclouvain.be/fr/etudier/aide')">
       <ion-icon slot="start" name='share-alt'></ion-icon>
       {{'HELP.WEB' | translate}}
