--- a/src/app/pages/param/param.scss
+++ b/src/app/pages/param/param.scss
@@ -18,3 +18,17 @@
     You should have received a copy of the GNU General Public License
     along with Stud.UCLouvain.  If not, see <http://www.gnu.org/licenses/>.
 */
+
+ion-button {
+    --border-radius: 5px;
+    --box-shadow: 0px 14px 25px var(--ion-color-setting);
+    --background: var(--ion-color-setting) !important;
+}
+
+div.settings {
+    background-color: #acaaaa !important;
+
+    button {
+        --background: var(--ion-color-setting) !important;
+    }
+}
