--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -94,3 +94,7 @@ ion-content.hM {
 ion-footer ion-toolbar ion-row ion-col {
     width: 20vw !important;
 }
+
+.emergency_alert {
+    --background: red !important;
+}
