--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -272,3 +272,18 @@ ion-tab-button {
   right: 10px !important;
   font-size: 20px !important;
 }
+
+.emergency_alert {
+  --background: #CE3030 !important;
+
+  h2,
+  p {
+    text-align: center !important;
+    color: white !important;
+  }
+
+  a {
+    color: #2727A4 !important;
+  }
+
+}
